<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_mobile_no_top_layout"
                style="@style/CustomOutlineBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/mobile_no"
                android:textColorHint="@color/hint_color"
                app:boxStrokeWidth="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.522"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_info_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobile_no_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="16dp"
                    android:textColor="@color/primary_text"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password_top_layout"
                style="@style/CustomOutlineBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/password"
                android:nextFocusDown="@id/login"
                android:textColorHint="@color/hint_color"
                app:boxStrokeWidth="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/hint_color"
                app:layout_constraintEnd_toEndOf="@+id/login_mobile_no_top_layout"
                app:layout_constraintStart_toStartOf="@+id/login_mobile_no_top_layout"
                app:layout_constraintTop_toBottomOf="@+id/login_mobile_no_top_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:textColor="@color/primary_text"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="@+id/login_password_top_layout"
                app:layout_constraintHorizontal_bias="0.485"
                app:layout_constraintStart_toStartOf="@+id/login_password_top_layout"
                app:layout_constraintTop_toBottomOf="@+id/login_password_top_layout" />

            <TextView
                android:id="@+id/dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/dont_have_account"
                android:textColor="@color/primary_text"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login" />

            <TextView
                android:id="@+id/create_new_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/create_new_account"
                android:textColor="#2196F3"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="@+id/dont_have_account"
                app:layout_constraintStart_toStartOf="@+id/dont_have_account"
                app:layout_constraintTop_toBottomOf="@+id/dont_have_account" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/library_image" />

            <TextView
                android:id="@+id/login_info_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/days_one"
                android:text="@string/login_header"
                android:textAlignment="center"
                android:textColor="@color/primary_text"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>